[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["whattsup <whattsup_kim@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.5.0"
numpy = "^1.23.3"
tqdm = "^4.64.1"
scipy = "^1.9.1"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
sklearn = "^0.0"
jupyterlab = "^3.4.8"
torch = {url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.1%2Bcu116-cp310-cp310-linux_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
